<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jiahaoliuliu.viewsanimated.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/textAppearanceLarge"
            android:text="@string/tilt_to_see_scroll_view"
            android:gravity="center"
            />

        <Button
            android:id="@+id/show_elements_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_elements"
            />

        <RelativeLayout
            android:id="@+id/all_elements_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/hidden_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_1"
                    />
                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_2"
                    />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_3"
                    />

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_4"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/last_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_button"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
